fixed bug: TD height is different when column fixed on IOS devices

--- a/packages/style/ve-table.less
+++ b/packages/style/ve-table.less
@@ -71,7 +71,9 @@
           padding: 10px;
           // hack content fill td height
           //height: 1px;
-          height: inherit;
+          //height: inherit;
+          display: table-cell;
+          height: 100%;
         }
       }
 
